--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
 
+  <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="lion roars while layng on the gras "
+/>
+
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="lion roars while layng on the gras "
+  title="Hear me roar!"
+/>
 </body>
 </html>
